// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Progressbar component with custom color matches the snapshot 1`] = `
<progress
  aria-hidden="true"
  className="ProgressBar-sc-26so1b-0 huFWHM"
  max={100}
  value={50}
/>
`;

exports[`The Progressbar component with progress matches the snapshot 1`] = `
<progress
  aria-hidden="true"
  className="ProgressBar-sc-26so1b-0 hdjRJc"
  max={100}
  value={50}
/>
`;

exports[`The Progressbar component without any props matches the snapshot 1`] = `
<progress
  aria-hidden="true"
  className="ProgressBar-sc-26so1b-0 hdjRJc"
  max={1}
  value={0}
/>
`;
